src/widgets/dialogs/qfiledialog.cpp
@@ -871,7 +871,12 @@ Q_AUTOTEST_EXPORT QString qt_tildeExpansion(const QString &path, bool *expanded 
         passwd *tmpPw;
         char buf[200];
         const int bufSize = sizeof(buf);
-        int err = getpwnam_r(userName.toLocal8Bit().constData(), &pw, buf, bufSize, &tmpPw);
+        int err = 0;
+#if defined(Q_OS_SOLARIS) && (_POSIX_C_SOURCE - 0 < 199506L)
+        tmpPw = getpwnam_r(userName.toLocal8Bit().constData(), &pw, buf, bufSize);
+#else
+        err = getpwnam_r(userName.toLocal8Bit().constData(), &pw, buf, bufSize, &tmpPw);
+#endif
         if (err || !tmpPw)
             return ret;
         const QString homePath = QString::fromLocal8Bit(pw.pw_dir);
